# pyaileys

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
examples/: demo_app.py  login_qr.py  simple_cli.py
examples/node_examples/: ping.json
proto/: WAProto.proto
scripts/: regenerate_generated.sh
src/pyaileys/: __init__.py  client.py  constants.py  exceptions.py  handshake.py  media.py  media_meta.py  socket.py  socket_config.py  store.py  usync.py
src/pyaileys/appstate/: __init__.py  keys.py  lthash.py  processor.py  sync.py
src/pyaileys/auth/: __init__.py  creds.py  serde.py  state.py  store.py  utils.py
src/pyaileys/connection/: __init__.py  websocket.py
src/pyaileys/crypto/: __init__.py  aes.py  curve.py  curve25519_signature.py  hkdf.py  noise.py
src/pyaileys/messages/: __init__.py  wa_message.py
src/pyaileys/proto/: WAProto_pb2.py  __init__.py
src/pyaileys/signal/: __init__.py  address.py  group.py  kdf.py  repository.py  util.py
src/pyaileys/util/: asyncio.py  bytes.py  events.py  json.py
src/pyaileys/wabinary/: __init__.py  constants.py  decode.py  encode.py  jid.py  types.py
tests/: test_appstate_processor.py  test_auth_store.py  test_curve25519_signatures.py  test_media_crypto.py  test_noise.py  test_signal_cipher_roundtrip.py  test_signal_group_sender_keys.py  test_usync.py  test_wa_padding.py  test_wabinary_roundtrip.py
tools/: e2e_smoke.sh  gen_wabinary_constants.py  patch_waproto_for_protoc.py
