[build-system]
requires = ["hatchling>=1.21.1"]
build-backend = "hatchling.build"

[project]
name = "pyaileys"
version = "0.1.4"
description = "Async WhatsApp Web (Multi-Device) protocol client in pure Python, inspired by Baileys."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Attila Sukosd" }]
keywords = ["whatsapp", "websocket", "asyncio", "protocol", "baileys"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
  "Typing :: Typed",
]
dependencies = [
  "cryptography>=42.0.0",
  "protobuf>=4.25.0",
  "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.1",
  "mypy>=1.10.0",
  "pre-commit>=3.7.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
  "twine>=5.1.1",
  "types-protobuf>=4.25.0.20240417",
]
qrcode = ["qrcode>=7.4.2"]

[project.urls]
Homepage = "https://github.com/atiti/pyaileys"
Repository = "https://github.com/atiti/pyaileys"
Issues = "https://github.com/atiti/pyaileys/issues"
Changelog = "https://github.com/atiti/pyaileys/blob/main/CHANGELOG.md"
Security = "https://github.com/atiti/pyaileys/security"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
  # Generated files (vendored from Baileys / protoc output).
  "src/pyaileys/proto/WAProto_pb2.py",
  "src/pyaileys/wabinary/constants.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_any_generics = true
no_implicit_optional = true
show_error_codes = true
pretty = true
mypy_path = ["src"]
# Protobuf codegen uses dynamic module-level globals that mypy can't model well.
exclude = "src/pyaileys/proto/WAProto_pb2\\.py$|src/pyaileys/wabinary/constants\\.py$"

[[tool.mypy.overrides]]
module = ["pyaileys.proto.WAProto_pb2"]
follow_imports = "skip"

[tool.hatch.build.targets.wheel]
packages = ["src/pyaileys"]
